that it conforms to relational normal form.
* Added MSA tables to the database.

03/01/2019 JRS

* Tweaked the Powerwave scripts.  Moved them under a "readings" folder.
* Collected all table-building functions under the "build_tables.R" script.
Added database entries to all generated tables.


03/14/2019 JRS

* Collected all plotting-related scripts together under the "plot" directory.
Removed some scripts that were no longer referenced.
* Collected the database-related scripts together under the "db" directory.
Removed dependencies on the database (will load the CSV files directly).
* Added a "factorize" argument to the load functions so that (ordered) factor
conversion can be bypassed for the database.


03/15/2019 JRS

* Organized the R folder.  Purged some unnecessary files.  Should be all organized.
* Fixed some issues with Packrat.
* Cleaned up the run-shiny.R file.


03/16/2019 JRS

* Fixed issue of variability plots not displaying.


03/17/2019 JRS

* Deleted main.R (no longer necessary).  Removed script loading from
run-shiny.R.  Added the "scripts" folder to .Rbuildignore.
* Removed all "source" and "library" references from all the source files.


03/20/2019 JRS

* Moved all scripts to the root to prevent devtools::load_all() from loading
them (some have side effects).
* Moved all data files to data/extdata.
* Removed all hard paths to the data files; referenced all with system.path.
* Removed all subfolders from the R folder.  Renamed the R files to keep them
organized.
* Cleaned up plot-mfg.R/plot-mfg-2.R.  Removed clashing functions from
plot-mfg.R.  Renamed plot-mfg.R to plot-var.R, and plot-mfg-2.R to plot-mfg.R.
Renamed the plot_mfg function to plot_var, and the plot_mfg_2 function to just
plot_mfg.

01/25/2020 JRS

* Converted Packrat over to renv.

01/26/2020 JRS

* Wrapped system.file file paths in functions to prevent staged installation
errors.
* Updated all packages to latest versions, tested, and took a snapshot.