@@ -3,9 +3,21 @@
 build_ui <- function(no.days=1, mfg.min=1, mfg.max=601,
                      ymax450=1.0, ymax650=0.07) {
 
-  navbarPage("100% testing of an ELISA plate production run",
+  navbarPage("100% testing of an ELISA production run",
 
-    tabPanel("Run order",
+    tabPanel(
+      "Description",
+      fluidPage(
+        fluidRow(
+          column(3),
+          column(6,
+                 HTML("<h1>Description</h1>")),
+          column(3)
+        )
+      ),
+    ),
+
+    tabPanel("By Batch",
        sidebarLayout(
          sidebarPanel(
            sliderInput("day", "Day",
@@ -28,19 +40,8 @@ build_ui <- function(no.days=1, mfg.min=1, mfg.max=601,
          )
       ),
 
-    tabPanel("MSA",
-       sidebarLayout(
-         sidebarPanel(
-           # Include plot options here...
 
-           ),
-         mainPanel(
-           plotOutput("msaplot")
-           )
-         )
-       ),
-
-    tabPanel("Mfg plates",
+    tabPanel("By Mfg Order",
        sidebarLayout(
          sidebarPanel(
 
@@ -176,7 +177,21 @@ build_ui <- function(no.days=1, mfg.min=1, mfg.max=601,
            )
 
          )  # sidebarLayout
-       )  # tabPanel
+
+
+       ),  # tabPanel
+
+    tabPanel("Embedded MSA",
+       sidebarLayout(
+         sidebarPanel(
+           # Include plot options here...
+
+           ),
+         mainPanel(
+           plotOutput("msaplot")
+           )
+         )
+       )
 
   )  # navbarPage
 
